--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,20 +4,32 @@ pipeline {
         maven "maven"
     }
     stages {
-        stage("compile") {
+        stage('Compile') {
             steps {
-                sh "mvn compile"
+                sh 'mvn compile'
             }
         }
-        stage("test") {
+        stage('Test') {
             steps {
-                sh "mvn test"
+                sh 'mvn test'
             }
         }
-        stage("Build") {
+        stage('Build') {
             steps {
-                sh "mvn package"
+                sh 'mvn package'
             }
+        }
+    }
+    post {
+        success {
+            mail to: 'vinod.s.19.2001@gmail.com',
+                 subject: "SUCCESS: ${env.JOB_NAME} #${env.BUILD_NUMBER}",
+                 body: "Build succeeded! See details at ${env.BUILD_URL}"
+        }
+        failure {
+            mail to: 'vinod.s.19.2001@gmail.com',
+                 subject: "FAILURE: ${env.JOB_NAME} #${env.BUILD_NUMBER}",
+                 body: "Build failed! See details at ${env.BUILD_URL}"
         }
     }
 }
