--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
 
         stage('Checkout') {
             steps {
-               // git 'https://github.com/vinodshivkumar4/maven.git'
+               echo "Checkout skipped"
             }
         }
 
