--- a/jenkinsfile
+++ b/jenkinsfile
@@ -27,6 +27,10 @@ pipeline {
 
         stage('Unit Test') {
             steps {
+                 for (int i - 0; i<60; i++) {
+                     echo "$(i + 1)"
+                     sleep 1
+                 }
                 sh 'mvn test'
             }
         }
