--- a/jenkinsfile
+++ b/jenkinsfile
@@ -27,7 +27,7 @@ pipeline {
 
         stage('Unit Test') {
             steps {
-                 for (int i - 0; i<60; i++) {
+                 for (int i = 0; i<60; i++) {
                      echo "$(i + 1)"
                      sleep 1
                  }
