--- a/jenkinsfile
+++ b/jenkinsfile
@@ -28,7 +28,7 @@ pipeline {
         stage('Unit Test') {
             steps {
                  for (int i = 0; i<60; i++) {
-                     echo "$(i + 1)"
+                     echo "${i + 1}"
                      sleep 1
                  }
                 sh 'mvn test'
