--- a/jenkinsfile
+++ b/jenkinsfile
@@ -27,14 +27,16 @@ pipeline {
 
         stage('Unit Test') {
             steps {
-                 for (int i = 0; i<60; i++) {
-                     echo "${i + 1}"
-                     sleep 1
-                 }
+                script {
+                    for (int i = 0; i < 60; i++) {
+                        echo "${i + 1}"
+                        sleep 1
+                    }
+                }
                 sh 'mvn test'
             }
         }
-    } // closes stages
+    }
 
     post {
         success {
@@ -48,4 +50,4 @@ pipeline {
                  body: "Build failed! See details at ${env.BUILD_URL}"
         }
     }
-} // closes pipeline
+}
